--- a/components/plugins/Cargo.toml
+++ b/components/plugins/Cargo.toml
@@ -8,8 +8,8 @@ name = "plugins"
 path = "lib.rs"
 plugin = true
 
-[dependencies.tenacious]
-git = "https://github.com/servo/rust-tenacious"
+#[dependencies.tenacious]
+#git = "https://github.com/servo/rust-tenacious"
 
 [dependencies.clippy]
 git = "https://github.com/Manishearth/rust-clippy"
